{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 30,
  "lineage": "7c8e8bc3-0835-6e50-2a0a-b983033912bf",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-007c91c04919b0e28",
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:instance/i-0429ec3b48242bc42",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "skills-nosql-client-ec2-profile",
            "id": "i-0429ec3b48242bc42",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c0c3d7786e03775e"
              }
            ],
            "primary_network_interface_id": "eni-0c0c3d7786e03775e",
            "private_dns": "ip-10-50-1-8.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.50.1.8",
            "public_dns": "ec2-13-125-209-225.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.125.209.225",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Project": "skills-nosql"
                },
                "tags_all": {
                  "Project": "skills-nosql"
                },
                "throughput": 125,
                "volume_id": "vol-009ac4d467a710c95",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0450dce0d4c7dcdac",
            "tags": {
              "Name": "skills-nosql-client-ec2"
            },
            "tags_all": {
              "Name": "skills-nosql-client-ec2",
              "Project": "skills-nosql"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0479b04244192d1c9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "i-0429ec3b48242bc42",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.docdb.aws_docdb_cluster.this",
            "module.docdb.aws_docdb_cluster_instance.this",
            "module.docdb.aws_docdb_cluster_parameter_group.this",
            "module.docdb.aws_docdb_subnet_group.this",
            "module.ec2.aws_iam_instance_profile.ec2",
            "module.ec2.aws_iam_role.ec2",
            "module.ec2.data.aws_ami.al2023",
            "module.ec2.data.aws_iam_policy_document.assume",
            "module.kms.aws_kms_key.docdb",
            "module.network.aws_security_group.client_ec2",
            "module.network.aws_security_group.docdb",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.s3_app.aws_s3_bucket.app",
            "module.s3_app.aws_s3_object.docdb_client_py",
            "module.s3_app.aws_s3_object.retail_dataset_json",
            "module.s3_app.random_id.suffix",
            "module.secrets.aws_secretsmanager_secret.docdb",
            "module.secrets.aws_secretsmanager_secret_version.docdb"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:internet-gateway/igw-04522600d2f07c9b8",
            "id": "igw-04522600d2f07c9b8",
            "owner_id": "076472864721",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "skills-nosql-igw"
            },
            "tags_all": {
              "Name": "skills-nosql-igw",
              "Project": "skills-nosql"
            },
            "vpc_id": "vpc-039f4af0147b9be26"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "igw-04522600d2f07c9b8",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:route-table/rtb-08c6acfffd5e59292",
            "id": "rtb-08c6acfffd5e59292",
            "owner_id": "076472864721",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04522600d2f07c9b8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "skills-nosql-public-rt"
            },
            "tags_all": {
              "Name": "skills-nosql-public-rt",
              "Project": "skills-nosql"
            },
            "timeouts": null,
            "vpc_id": "vpc-039f4af0147b9be26"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtb-08c6acfffd5e59292",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f943b770edc4d1d1",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-08c6acfffd5e59292",
            "subnet_id": "subnet-0450dce0d4c7dcdac"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtbassoc-0f943b770edc4d1d1",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "client_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:security-group/sg-0479b04244192d1c9",
            "description": "Client EC2 - allow 8080 inbound from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0479b04244192d1c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Client application port",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "skills-nosql-client-ec2-sg",
            "name_prefix": "",
            "owner_id": "076472864721",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "skills-nosql-client-ec2-sg"
            },
            "tags_all": {
              "Name": "skills-nosql-client-ec2-sg",
              "Project": "skills-nosql"
            },
            "timeouts": null,
            "vpc_id": "vpc-039f4af0147b9be26"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "sg-0479b04244192d1c9",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "docdb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:security-group/sg-0434b5ba8c2df9f98",
            "description": "DocumentDB - allow 27017 only from client EC2 security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0434b5ba8c2df9f98",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "DocumentDB from client EC2",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0479b04244192d1c9"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "skills-nosql-docdb-sg",
            "name_prefix": "",
            "owner_id": "076472864721",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "skills-nosql-docdb-sg"
            },
            "tags_all": {
              "Name": "skills-nosql-docdb-sg",
              "Project": "skills-nosql"
            },
            "timeouts": null,
            "vpc_id": "vpc-039f4af0147b9be26"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "sg-0434b5ba8c2df9f98",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_security_group.client_ec2",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:subnet/subnet-0ce4b21aa98ac36d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.50.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce4b21aa98ac36d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076472864721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "skills-nosql-private-subnet-1"
            },
            "tags_all": {
              "Name": "skills-nosql-private-subnet-1",
              "Project": "skills-nosql"
            },
            "vpc_id": "vpc-039f4af0147b9be26"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "subnet-0ce4b21aa98ac36d9",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:subnet/subnet-064dc4eb515f6ec1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.50.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064dc4eb515f6ec1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076472864721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "skills-nosql-private-subnet-2"
            },
            "tags_all": {
              "Name": "skills-nosql-private-subnet-2",
              "Project": "skills-nosql"
            },
            "vpc_id": "vpc-039f4af0147b9be26"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "subnet-064dc4eb515f6ec1f",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:subnet/subnet-0450dce0d4c7dcdac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.50.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0450dce0d4c7dcdac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "076472864721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "skills-nosql-public-subnet"
            },
            "tags_all": {
              "Name": "skills-nosql-public-subnet",
              "Project": "skills-nosql"
            },
            "vpc_id": "vpc-039f4af0147b9be26"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "subnet-0450dce0d4c7dcdac",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:vpc/vpc-039f4af0147b9be26",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.50.0.0/16",
            "default_network_acl_id": "acl-07a2a3d6cc29333f5",
            "default_route_table_id": "rtb-0407be4a313113f0b",
            "default_security_group_id": "sg-08899fac703c5ba18",
            "dhcp_options_id": "dopt-06a0b0a59e6bde460",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-039f4af0147b9be26",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0407be4a313113f0b",
            "owner_id": "076472864721",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "skills-nosql-vpc"
            },
            "tags_all": {
              "Name": "skills-nosql-vpc",
              "Project": "skills-nosql"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "vpc-039f4af0147b9be26",
            "region": "ap-northeast-2"
          }
        }
      ]
    }
  ]
}